# Auto-rocokingdom

./: .gitignore  AutoRoco.spec  CHANGELOG.md  CLAUDE.md  Flower.spec  Launcher.spec  README.md  config.py  flower.py  gui.py  launcher.py  main.py  pyproject.toml  requirements.txt
app/: config.py  debug_templates.py  flower.py  gui.py  main.py  updater.py
app/core/: ball_scanner.py  engine.py  input.py  logger.py  ocr.py  pollute_logger.py  session.py  vision.py
app/modes/: smart.py
core/: engine.py  input.py  pollute_logger.py  vision.py  window.py
modes/: battle.py  escape.py  smart.py
specs/: AutoRoco.spec  Flower.spec  Launcher.spec
